# FastAPI_Auth

./: README.md  pyproject.toml  runCommand.sh
app/: auth.py  crud.py  google_auth.py  main.py  models.py
app/api/routes/: auth_routes.py  google_auth_routes.py
app/crud/: auth_crud.py
app/dependencies/: auth_dependencies.py  dependencies.py
app/schemas/: auth_schemas.py
app/services/: auth_service.py
migrations/: env.py
migrations/versions/: 8f131c02bfb8_add_email_column_to_users_table.py
